--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ repositories {
 
 dependencies {
 	providedCompile 'javax:javaee-api:7.0'
-	// providedCompile 'javax.servlet:jstl:1.2'
+	providedCompile 'javax.servlet:jstl:1.2'
 	// implementation 'org.springframework:spring-webmvc:5.1.4.RELEASE'
 	// implementation 'org.springframework.data:spring-data-jpa:2.1.4.RELEASE'
 	// implementation 'org.eclipse.persistence:eclipselink:2.7.4'
