--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ repositories {
 dependencies {
 	providedCompile 'javax:javaee-api:7.0'
 	implementation 'javax.servlet:jstl:1.2'
+	implementation 'org.springframework:spring-webmvc:5.1.4.RELEASE'
 	// implementation 'org.eclipse.persistence:eclipselink:2.7.4'
 }
 
