--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,28 @@
-/.gradle/
-/build/
+# scm
+CVS/
+.svn/
+
+# dependencies
+.gradle/
+gradle*
+bower_components/
+node_modules/
+vendor/
+
+# build
+bin/
+build/
+out/
+target/
+
+# eclipse
+.metadata/
+Servers/
+.settings/
+.classpath
+.project
+
+# idea
+.idea/
+*.iml
+*.iws
